# data-prep-engine

./: .gitignore  README.md  check.ipynb  data.csv  pyproject.toml
.github/workflows/: codeql.yml
Test/: random.ipynb  test.ipynb
data_prep_engine/: pyproject.toml  upload_to_testpypi.sh
data_prep_engine/src/data_prep_engine/: __init__.py
data_prep_engine/src/data_prep_engine/diagnostics/: doctor.py
